2003-11-01  John Levon  <levon@movementarian.org>

	* daemon/liblegacy/opd_parse_proc.c: use op_follow_link

	* libutil/op_file.c:
	* libutil/op_file.h: make op_get_link() static, rename
	op_basename to op_c_basename

	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h: rename to op_basename()/op_dirname().
	Use op_follow_link() for follow_link().

	* libutil++/tests/file_manip_tests.cpp:
	* gui/oprof_start_util.cpp:
	* libpp/locate_images.cpp:
	* libpp/name_storage.cpp:
	* libutil++/path_filter.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: fixup from above changes

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h: has_debug_info() new member
	* pp/populate.h:
	* pp/populate.cpp: 
	* pp/opannotate.cpp: use it to error out when --assembly is not
	  requested and no debug information exists

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/common_option.cpp: don't exit() if merge_by.lib is set through
	  !allow_lib

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport_options.cpp: move handle_merge_option() ...
	* pp/common_option.h: 
	* pp/common_option.cpp: here
	* pp/opannotate_options.cpp: use it but disallow --merge=lib

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.c:
	* libutil/op_file.h: implement dirname(), is_directory() and
	  op_follow_link()
	* daemon/oprofiled.c: follow symlink for image filter
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h:
	* gui/oprof_start_util.cpp:
	* libpp/profile_spec.cpp:  rename op_follow_link() to follow_link()

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/tests/file_tests.c: "//usr" --> "//usr"
	* libutil++/tests/.cvsignore:
	* libutil++/tests/Makefile.am:
	* libutil++/tests/file_manip_tests.cpp: new tests file.

2003-10-31  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: fix compilation

2003-10-30  John Levon  <levon@movementarian.org>

	* libpp/profile_spec.cpp: introduce a helper function